--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "SET Wi-Fi",
     "full": "Full",
     "usage_frequency_metrics": "Usage Frequency Metrics",
-    "super_cool_upper_camel_case": "Super cool",
-    "super_freeze_upper_camel_case": "Super freeze",
+    "super_cool_upper_camel_case": "Super Cool",
+    "super_freeze_upper_camel_case": "Super Freeze",
     "input_password_cdc_tips": "The password must be 8 to 20 characters long and consist of at least 1 number, 1 capital letter, 1 small letter, and 1 special character (#?!@$%^&*-).",
     "self_pump_setup_1": "Power off the heap pump, long press On/Off button and Down button at the same time for 3 seconds, then the Wi-Fi light will flash.",
     "self_pump_setup_2": "Connect to Wi-Fi according to tips displayed on the APP. When the connection is successful, the Wi-Fi light will be on.",
@@ -3728,7 +3728,7 @@
     "delete_all_schedu_tips": "Are you sure you want to delete all Scheduling?",
     "edit_scheduling": "Edit Scheduling",
     "target_key": "target",
-    "asko_oven_factory_reset_content": "The appliance can be reset back to factory defaults. \u2028All personal settings and stored data will be lost.",
+    "asko_oven_factory_reset_content": "The appliance can be reset back to factory defaults. All personal settings and stored data will be lost.",
     "invalid_input": "Invalid Input.",
     "key": "English",
     "filename": "i18n_en.json",
@@ -3771,7 +3771,7 @@
     "gorenje_td_fast89": "Fast89",
     "gorenje_td_extra_hygiene": "ExtraHygiene",
     "gorenje_td_towels": "Towels",
-    "gorenje_td_kids_toys": "KidsToys",
+    "gorenje_td_kids_toys": "Kids Toys",
     "gorenje_td_jackets_coats": "Jackets/Coats",
     "gorenje_td_sneakers_slippers": "Sneakers/Slippers",
     "gorenje_td_cotton_underwear": "CottonUnderwear",
@@ -3872,7 +3872,7 @@
     "canceling_drying": "Canceling drying",
     "clear_all_search_history": "Clear all search history",
     "clear_all_search_history_tips": "This operation will clear all the search history.",
-    "jch_connect_device_subtitle": "Follow these steps to connect the device to the WiFi.",
+    "jch_connect_device_subtitle": "Follow these steps to connect the device to the Wi-Fi.",
     "jch_pair_new_connect_wifi_hint_wc": "Connect to \"HIS-xxxx\" network in the Wi-Fi settings of your smartphone. \n\nExit the app, go to your smartphone’s WiFi settings. Connect to \"HIS-xxxx\" network and return back to the app.",
     "jch_add_separated_ac_2": "Press the left and right wind button for 6 times on the @remote controller#.\nOr press the \"Sleep\" button 8 times in the @wire remote controller#.",
     "rf_uv_tech": "UV Tech",
@@ -3901,22 +3901,22 @@
     "electricity_target_key": "Electricity Target",
     "about_usage_proportion_key": "About Usage Proportion",
     "about_usage_proportion_tip_key": "The pie chart illustrates the energy cost distribution among your household devices. The category labeled \"Others\" represents devices with consumption levels too minor to be calculated individually.",
-    "data_shown_are_estimates_only_key": "Data shown are estimates only .",
-    "about_energy_saving_tip_key": "The percentage shown represents the energy savings achieved by using ECO mode on your appliances compared to their standard operation.The bar chart highlights the top 7 appliances that contribute most to energy conservation in your home. It details the actual energy costs and the savings incurred when ECO mode is activated.",
+    "data_shown_are_estimates_only_key": "Data shown are estimates only.",
+    "about_energy_saving_tip_key": "The percentage shown represents the energy savings achieved by using ECO mode on your appliances compared to their standard operation. The bar chart highlights the top 7 appliances that contribute most to energy conservation in your home. It details the actual energy costs and the savings incurred when ECO mode is activated.",
     "about_energy_saving_key": "About Energy Saving Proportion",
     "rf_uv_tech_desc": "The built-in UV lighting will reduce 99.99%* of bacteria in the waterway automatically.",
     "other_rinse": "other rinse",
     "search_again_title": "Confirm to search again?",
-    "search_again_content": "Re searching will update the number of devices, and the control function will not be available during the re searching process.",
+    "search_again_content": "Researching will update the number of devices, and the control function will not be available during the re searching process.",
     "select_at_least_one_device": "Please select at least one device",
     "ri_select_address_tips": "If you select an address that is not your default one, the selected address will become the default.",
     "default_address": "Default Address",
     "other_addresses": "Other Addresses",
     "dhw_boost": "DHW boost",
     "selected_all": "selected all",
-    "set_temp_error": "set temperature cannot be achieved.Please modify the waterway temperature.",
+    "set_temp_error": "The set temperature cannot be achieved. Please modify the waterway temperature.",
     "no_device_support_eco_key": "No device is available, please make sure your devices are connected and support ECO mode",
-    "appliance_disconnect_cannot_open_eco": "The device is disconnected, please check if WIFI and Remote Cotrol are enable.",
+    "appliance_disconnect_cannot_open_eco": "The device is disconnected, please check if Wi-Fi and Remote Cotrol are enable.",
     "power_on_remote_eabled_tips": "Only available when the device is powered on and remote start is enabled.",
     "power_on_tips": "Only available when the device is powered on.",
     "asko_oven_on_during_on": "ON during use",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## devices are running ECO mode",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Based on device's operating mode, some features may not be executed successfully.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Large grill + Fan + Microwave"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Large grill + Fan + Microwave",
+    "CL_DV_OV_baking_stopped": "Baking in ## was stopped.",
+    "CL_DV_OV_check_to_confirm": "Check the oven to confirm."
 }
