--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "ضبط شبكة Wi-Fi",
     "full": "كامل",
     "usage_frequency_metrics": "مقاييس تكرار الاستخدام",
-    "super_cool_upper_camel_case": "التبريد الفائق",
-    "super_freeze_upper_camel_case": "التجميد الفائق",
+    "super_cool_upper_camel_case": "تبريد سريع",
+    "super_freeze_upper_camel_case": "تجميد خارق",
     "input_password_cdc_tips": "يجب أن تتكون كلمة المرور من 8 إلى 20 حرفًا وأن تتكون من رقم واحد على الأقل وحرف كبير وحرف صغير واحد وحرف خاص واحد (#؟! @ $٪ ^ & * -).",
     "self_pump_setup_1": "قم بإيقاف تشغيل مضخة الكومة، واضغط لفترة طويلة على زر التشغيل/الإيقاف والزر السفلي في نفس الوقت لمدة 3 ثوانٍ، ثم يومض ضوء Wi-Fi.",
     "self_pump_setup_2": "اتصل بشبكة Wi-Fi وفقًا للنصائح المعروضة على التطبيق. عندما يتم الاتصال بنجاح، سيضيء مصباح Wi-Fi.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## الأجهزة تعمل بوضع ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "بناءً على وضع تشغيل الجهاز، قد لا يتم تنفيذ بعض الميزات بنجاح.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": ""
+    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_baking_stopped": "تم إيقاف الخبز في ##.",
+    "CL_DV_OV_check_to_confirm": "افحص الفرن للتأكيد."
 }
