--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "НАСТРОЙКА Wi-Fi",
     "full": "Пълна",
     "usage_frequency_metrics": "Показатели за честота на използване",
-    "super_cool_upper_camel_case": "Super Cool",
-    "super_freeze_upper_camel_case": "Super Freeze",
+    "super_cool_upper_camel_case": "Бързо охлаждане",
+    "super_freeze_upper_camel_case": "Супер замразяване",
     "input_password_cdc_tips": "Паролата трябва да е с дължина от 8 до 20 знака и да се състои от поне 1 цифра, 1 главна буква, 1 малка буква и 1 специален знак (#?!@$%^&*-).",
     "self_pump_setup_1": "Изключете heap помпата, натиснете дълго бутона за включване/изключване и бутона за надолу едновременно за 3 секунди, след което Wi-Fi светлината ще мига.",
     "self_pump_setup_2": "Свържете се с Wi-Fi според съветите, показани в ПРИЛОЖЕНИЕТО. Когато връзката е успешна, индикаторът за Wi-Fi ще свети.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## устройства работят в режим ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Въз основа на режима на работа на устройството някои функции може да не се изпълнят успешно.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Голям грил + вентилатор + микровълни"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Голям грил + вентилатор + микровълни",
+    "CL_DV_OV_baking_stopped": "Печенето в ## беше спряно.",
+    "CL_DV_OV_check_to_confirm": "Проверете фурната, за да потвърдите."
 }
