--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "Wi-Fi EINSTELLEN",
     "full": "Voll",
     "usage_frequency_metrics": "Nutzungshäufigkeitsmetriken",
-    "super_cool_upper_camel_case": "Super Cool",
-    "super_freeze_upper_camel_case": "Super Freeze",
+    "super_cool_upper_camel_case": "Schnelles Abkühlen",
+    "super_freeze_upper_camel_case": "Ich habe keine zeit für sowas.",
     "input_password_cdc_tips": "Das Passwort muss 8 bis 20 Zeichen lang sein und aus mindestens 1 Zahl, 1 Großbuchstaben, 1 Kleinbuchstaben und 1 Sonderzeichen (#?!@$%^&*-) bestehen.",
     "self_pump_setup_1": "Schalten Sie die Haufenpumpe aus, drücken Sie gleichzeitig 3 Sekunden lang die Ein-/Aus-Taste und die Ab-Taste, dann blinkt die Wi-Fi-Leuchte.",
     "self_pump_setup_2": "Stellen Sie gemäß den in der APP angezeigten Tipps eine Wi-Fi-Verbindung her. Wenn die Verbindung erfolgreich ist, leuchtet die Wi-Fi-Leuchte.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## Geräte laufen im ECO-Modus",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Abhängig vom Betriebsmodus des Geräts können einige Funktionen möglicherweise nicht erfolgreich ausgeführt werden.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Großer Grill + Ventilator + Mikrowelle"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Großer Grill + Ventilator + Mikrowelle",
+    "CL_DV_OV_baking_stopped": "Das Backen in ## wurde gestoppt.",
+    "CL_DV_OV_check_to_confirm": "Überprüfen Sie zur Bestätigung den Ofen."
 }
