--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "ΡΥΘΜΙΣΗ Wi-Fi",
     "full": "Γεμάτος",
     "usage_frequency_metrics": "Μετρήσεις συχνότητας χρήσης",
-    "super_cool_upper_camel_case": "Super Cool",
-    "super_freeze_upper_camel_case": "Super Freeze",
+    "super_cool_upper_camel_case": "Γρήγορη ψύξη",
+    "super_freeze_upper_camel_case": "Σούπερ πάγωμα",
     "input_password_cdc_tips": "Ο κωδικός πρόσβασης πρέπει να αποτελείται από 8 έως 20 χαρακτήρες και να αποτελείται από τουλάχιστον 1 αριθμό, 1 κεφαλαίο γράμμα, 1 μικρό γράμμα και 1 ειδικό χαρακτήρα (#?!@$%^&*-).",
     "self_pump_setup_1": "Απενεργοποιήστε την αντλία σωρού, πατήστε παρατεταμένα το κουμπί On/Off και το κουμπί Down ταυτόχρονα για 3 δευτερόλεπτα και, στη συνέχεια, η λυχνία Wi-Fi θα αναβοσβήσει.",
     "self_pump_setup_2": "Συνδεθείτε σε Wi-Fi σύμφωνα με τις συμβουλές που εμφανίζονται στην APP. Όταν η σύνδεση είναι επιτυχής, η φωτεινή ένδειξη Wi-Fi θα είναι αναμμένη.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "Οι ## συσκευές εκτελούν λειτουργία ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Με βάση τον τρόπο λειτουργίας της συσκευής, ορισμένες λειτουργίες ενδέχεται να μην εκτελεστούν με επιτυχία.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Μεγάλο γκριλ + Ανεμιστήρας + Μικροκύματα"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Μεγάλο γκριλ + Ανεμιστήρας + Μικροκύματα",
+    "CL_DV_OV_baking_stopped": "Το ψήσιμο στο ## διακόπηκε.",
+    "CL_DV_OV_check_to_confirm": "Ελέγξτε τον φούρνο για επιβεβαίωση."
 }
