--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "TETAPKAN Wi-Fi",
     "full": "penuh",
     "usage_frequency_metrics": "Metrik kekerapan penggunaan",
-    "super_cool_upper_camel_case": "Penyejukan super",
-    "super_freeze_upper_camel_case": "Pembekuan super",
+    "super_cool_upper_camel_case": "Penyejukan Cepat",
+    "super_freeze_upper_camel_case": "Super Pembekuan",
     "input_password_cdc_tips": "Kata laluan mestilah 8 hingga 20 aksara panjang dan terdiri daripada sekurang-kurangnya 1 nombor, 1 huruf besar, 1 huruf kecil dan 1 aksara khas (#?!@$%^&*-).",
     "self_pump_setup_1": "Matikan pam longgokan, tekan lama butang Hidup/Mati dan butang Bawah pada masa yang sama selama 3 saat, kemudian lampu Wi-Fi akan berkelip.",
     "self_pump_setup_2": "Sambung ke Wi-Fi mengikut petua yang dipaparkan pada APP. Apabila sambungan berjaya, lampu Wi-Fi akan dihidupkan.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## peranti menjalankan mod ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mod pengendalian peranti, beberapa ciri mungkin tidak berjaya dilaksanakan.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": ""
+    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_baking_stopped": "Pembakaran dalam ## telah dihentikan.",
+    "CL_DV_OV_check_to_confirm": "Periksa ketuhar untuk mengesahkan."
 }
