--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "SET Wi-Fi",
     "full": "Full",
     "usage_frequency_metrics": "Beregning av bruksfrekvens",
-    "super_cool_upper_camel_case": "Superkult",
-    "super_freeze_upper_camel_case": "Super fryse",
+    "super_cool_upper_camel_case": "Rask kjøling",
+    "super_freeze_upper_camel_case": "Superfrys",
     "input_password_cdc_tips": "Passordet må være 8 til 20 tegn langt og bestå av minst 1 tall, 1 stor bokstav, 1 liten bokstav og 1 spesialtegn (#?!@$%^&*-).",
     "self_pump_setup_1": "Slå av haugpumpen, trykk lenge på av/på-knappen og ned-knappen samtidig i 3 sekunder, så vil Wi-Fi-lyset blinke.",
     "self_pump_setup_2": "Koble til Wi-Fi i henhold til tips som vises på APP. Når tilkoblingen er vellykket, vil Wi-Fi-lampen lyse.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## enheter kjører ECO-modus",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Basert på enhetens driftsmodus kan det hende at enkelte funksjoner ikke blir utført.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + vifte + mikrobølgeovn"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Stor grill + vifte + mikrobølgeovn",
+    "CL_DV_OV_baking_stopped": "Baking i ## ble stoppet.",
+    "CL_DV_OV_check_to_confirm": "Sjekk ovnen for å bekrefte."
 }
