--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "USTAW Wi-Fi",
     "full": "Pełny",
     "usage_frequency_metrics": "Metryki częstotliwości użytkowania",
-    "super_cool_upper_camel_case": "Super chłodzenie",
-    "super_freeze_upper_camel_case": "Super zamrażanie",
+    "super_cool_upper_camel_case": "Szybkie chłodzenie",
+    "super_freeze_upper_camel_case": "Super Zamrożenie",
     "input_password_cdc_tips": "Hasło musi mieć od 8 do 20 znaków i składać się z co najmniej 1 cyfry, 1 dużej litery, 1 małej litery i 1 znaku specjalnego (#?!@$%^&*-).",
     "self_pump_setup_1": "Wyłącz pompę hałdy, naciśnij i przytrzymaj jednocześnie przycisk włączania/wyłączania i przycisk w dół przez 3 sekundy, a następnie zacznie migać lampka Wi-Fi.",
     "self_pump_setup_2": "Połącz się z Wi-Fi zgodnie ze wskazówkami wyświetlanymi w aplikacji. Po pomyślnym nawiązaniu połączenia kontrolka Wi-Fi będzie się świecić.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## urządzenia działają w trybie ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "W zależności od trybu pracy urządzenia niektóre funkcje mogą nie zostać pomyślnie wykonane.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Duży grill +  wentylator + mikrofalówka"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Duży grill +  wentylator + mikrofalówka",
+    "CL_DV_OV_baking_stopped": "Pieczenie w ## zostało zatrzymane.",
+    "CL_DV_OV_check_to_confirm": "Sprawdź piekarnik, aby potwierdzić."
 }
