--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "SETARE Wi-Fi",
     "full": "Plin",
     "usage_frequency_metrics": "Valorile frecvenței de utilizare",
-    "super_cool_upper_camel_case": "Super Cool",
-    "super_freeze_upper_camel_case": "Super Freeze",
+    "super_cool_upper_camel_case": "Răcire rapidă",
+    "super_freeze_upper_camel_case": "Super îngheț",
     "input_password_cdc_tips": "Parola trebuie să aibă între 8 și 20 de caractere și să conțină cel puțin 1 număr, 1 literă majusculă, 1 literă mică și 1 caracter special (#?!@$%^&*-).",
     "self_pump_setup_1": "Opriți pompa, apăsați lung butonul Pornit/Oprit și butonul Jos în același timp timp de 3 secunde, apoi ledul Wi-Fi va clipi.",
     "self_pump_setup_2": "Conectați-vă la Wi-Fi în conformitate cu sfaturile afișate în aplicație. Când conexiunea este reușită, ledul Wi-Fi se va aprinde.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## dispozitive rulează modul ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Pe baza modului de operare al dispozitivului, este posibil ca unele funcții să nu fie executate cu succes.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Grătar mare + ventilator + microunde"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Grătar mare + ventilator + microunde",
+    "CL_DV_OV_baking_stopped": "Coacerea în ## a fost oprită.",
+    "CL_DV_OV_check_to_confirm": "Verificați cuptorul pentru a confirma."
 }
