--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "НАСТРОЙКА Wi-Fi",
     "full": "Полный",
     "usage_frequency_metrics": "Показатели частоты использования",
-    "super_cool_upper_camel_case": "Суперохлаждение",
-    "super_freeze_upper_camel_case": "Суперзаморозка",
+    "super_cool_upper_camel_case": "Быстрое охлаждение",
+    "super_freeze_upper_camel_case": "Супер заморозка",
     "input_password_cdc_tips": "Пароль должен содержать от 8 до 20 символов и состоять как минимум из 1 цифры, 1 заглавной буквы, 1 строчной буквы и 1 специального символа (#?!@$%^&*-).",
     "self_pump_setup_1": "Выключите тепловой насос. Одновременно нажмите и удерживайте кнопку вкл./выкл. и кнопку «Вниз» в течение 3 секунд. Начнет мигать индикатор Wi-Fi.",
     "self_pump_setup_2": "Подключитесь к Wi-Fi в соответствии с указаниями в приложении. При успешном подключении загорится индикатор Wi-Fi.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## устройств работают в экономичном режиме",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "В зависимости от режима работы устройства некоторые функции могут выполняться некорректно.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Большой гриль + вентилятор + микроволны"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Большой гриль + вентилятор + микроволны",
+    "CL_DV_OV_baking_stopped": "Выпечка в ## была остановлена.",
+    "CL_DV_OV_check_to_confirm": "Проверьте духовку, чтобы убедиться."
 }
