--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "NASTAVTE Wi-Fi",
     "full": "Plný",
     "usage_frequency_metrics": "Metriky frekvencie používania",
-    "super_cool_upper_camel_case": "Režim Super Cool",
-    "super_freeze_upper_camel_case": "Režim Super Freeze",
+    "super_cool_upper_camel_case": "Rýchle chladenie",
+    "super_freeze_upper_camel_case": "Super zmrazenie",
     "input_password_cdc_tips": "Heslo musí mať 8 až 20 znakov a musí pozostávať aspoň z 1 čísla, 1 veľkého písmena, 1 malého písmena a 1 špeciálneho znaku (#?!@$%^&*-).",
     "self_pump_setup_1": "Vypnite čerpadlo haldy, dlho stlačte súčasne tlačidlo zapnutia/vypnutia a tlačidlo nadol na 3 sekundy, potom zabliká kontrolka Wi-Fi.",
     "self_pump_setup_2": "Pripojte sa k sieti Wi-Fi podľa tipov zobrazených v aplikácii APP. Keď je pripojenie úspešné, kontrolka Wi-Fi sa rozsvieti.",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## zariadení je spustených v režime ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "V závislosti od prevádzkového režimu zariadenia sa niektoré funkcie nemusia úspešne spustiť.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "Veľký gril + ventilátor + mikrovlnná rúra"
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Veľký gril + ventilátor + mikrovlnná rúra",
+    "CL_DV_OV_baking_stopped": "Pečenie v ## bolo zastavené.",
+    "CL_DV_OV_check_to_confirm": "Skontrolujte rúru a potvrďte."
 }
