--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -2238,8 +2238,8 @@
     "set_wifi_uppercase": "设置Wi-Fi",
     "full": "满",
     "usage_frequency_metrics": "使用频率",
-    "super_cool_upper_camel_case": "速冷",
-    "super_freeze_upper_camel_case": "速冻",
+    "super_cool_upper_camel_case": "快速制冷",
+    "super_freeze_upper_camel_case": "超级冷冻",
     "input_password_cdc_tips": "密码必须由8至20个字符组成，其中至少包含1个数字、1个大写字母、1个小写字母和1个特殊字符(#?!@$%^&*-)。",
     "self_pump_setup_1": "关闭堆泵电源，同时长按开/关按钮和向下按钮3秒钟，然后Wi-Fi灯将闪烁。",
     "self_pump_setup_2": "根据APP提示连接Wi-Fi，连接成功后Wi-Fi指示灯亮起。",
@@ -3998,5 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## 设备正在运行 ECO 模式",
     "CL_CF_UC_full_name_with_title": "{surName}{firstName} {title}",
     "CL_AU_AC_automation_features_may_not_execute_key": "根据设备的操作模式，某些功能可能无法成功执行。",
-    "CL_DV_OV_g800_mode_grill_fan_micro": ""
+    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_baking_stopped": "## 中的烘烤已停止。",
+    "CL_DV_OV_check_to_confirm": "检查烤箱来确认。"
 }
